[package]
name = "skia-desktop"
version = "0.0.1"
license = "Apache-2.0"
authors = ["mingshuisheng <mingshuisheng@gmail.com>"]
repository = "https://github.com/mingshuisheng/skia-desktop-rs"
keywords = ["gui", "skia", "winit"]
edition = "2021"
description = "desktop framework"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.9"
glutin = "0.31.2"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"
gl = "0.14.0"
skia-safe = { version = "0.69.0", features = ["gl"] }

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
